Bugfix Android Chrome jumping page on scroll gallery
This change fixes the bug. It seems that Chrome for Android has difficulties handling CSS sort-order changes.

It fixes it by using the layout XML to correct the DOM and remove the sort-order from the less files for the PDP.

--- a/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/_module.less
@@ -519,10 +519,6 @@
             .lib-vendor-prefix-display(flex);
             .lib-vendor-prefix-flex-direction(column);
         }
-
-        .product.media {
-            .lib-vendor-prefix-order(-1);
-        }
     }
 
     .product-info-main .box-tocart {
